--- a/css/custom.css
+++ b/css/custom.css
@@ -1,123 +1,180 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+html,
+body {
+  height: 100%; /* p/ posicionar o footer no final da página*/
 }
 
 body {
-	background-color: #0c0f16;
+  background-color: #0c0f16;
+  display: flex; /* p/ posicionar o footer no final da página*/
+  flex-direction: column; /* p/ posicionar o footer no final da página*/
 }
 
 /*div-pai do nav */
 .max-width {
-	max-width: 1300px;
-	margin: auto;
-	padding: 0 20px;
+  max-width: 1300px;
+  margin: auto;
+  padding: 0 20px;
 }
 
 /* nav */
 .navbar {
-	position: fixed;
-	width: 100%;
-	z-index: 999;
-	padding: 20px 0;
-	font-family: "Ubuntu", sans-serif;
-	background-color: #121721;
-	border-bottom: 1px solid #1b202a;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  padding: 20px 0;
+  font-family: "Ubuntu", sans-serif;
+  /* background-color: #121721; */
+  background-color: none;
+  border-bottom: 1px solid #1b202a;
 }
 
 .navbar .max-width {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .navbar .logo a {
-	color: #547ec7;
-	font-size: 35px;
-	font-weight: 500;
+  color: #547ec7;
+  font-size: 35px;
+  font-weight: 500;
+}
+
+/*hover .logo */
+.navbar .logo a:hover {
+  color: #fff;
+}
+
+.navbar .menu {
+  margin-right: 20px;
 }
 
 .navbar .menu li {
-	list-style: none;
-	display: inline-block; /*coloca em uma unica linha*/
+  list-style: none;
+  display: inline-block; /*coloca em uma unica linha*/
+}
 
+/*hover no a*/
+.navbar .menu li a:hover {
+  color: #26c5dc;
 }
 
 .navbar .menu li a {
-	display: block;
-	color: #fff;
-	font-size: 18px;
-	font-weight: 400;
-	margin-left: 25px;
+  display: block;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  margin-left: 25px;
 }
 
 .menu-btn {
-	color: #fff;
-	font-size: 23px;
-	cursor: pointer;
-	display: none; /*esconder icone bars*/
+  color: #fff;
+  font-size: 23px;
+  cursor: pointer;
+  display: none; /*esconder icone bars*/
 }
 
 /*mostrar o icone bars */
 /* @media (max-width: 947px) { */
 @media (max-width: 640px) {
-	.menu-btn {
-		display: block;
-		z-index: 999;
-	}
+  .menu-btn {
+    display: block;
+    z-index: 999;
+  }
 
-	/*trocando de icone bars p/ f00d */
-	.menu-btn i.active:before {
-		content: "\f00d";
-	}
-	.navbar .menu {
-		position: fixed;
-		background-color: #121721;
-		height: 100vh; /* para ocupar 100% da tela quando minimizar*/
-		width: 100%;
-		left: -100%; /* esconde todo menu da direita para esquerda*/
-		/* top: 0; */
-		top: 10%;
-		text-align: center;
-		padding-top: 80px;
-		transition: all 1.3s ease;
-	}
-	.navbar .menu.active {
-		left: 0;
-	}
-	.navbar .menu li {
-		display: block;
-	}
+  /*trocando de icone bars p/ f00d */
+  .menu-btn i.active:before {
+    content: "\f00d";
+  }
+  .navbar .menu {
+    position: fixed;
+    background-color: #121721;
+    height: 100vh; /* para ocupar 100% da tela quando minimizar*/
+    width: 100%;
+    left: -100%; /* esconde todo menu da direita para esquerda*/
+    /* top: 0; */
+    top: 10%;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 1.3s ease;
+  }
+  .navbar .menu.active {
+    left: 0;
+  }
+  .navbar .menu li {
+    display: block;
+  }
 
-	/*hover*/
+  /*hover*/
 
-	.navbar .menu li:hover {
-		border: 1px solid #d6d6d6;
-	}
-	.navbar .menu li a:hover {
-		color: #d6d6d6;
-	}
-	/*hover*/
+  .navbar .menu li:hover {
+    border: 1px solid #26c5d5;
+    border-radius: 4px;
+  }
+  .navbar .menu li a:hover {
+    color: #26c5d5;
+  }
+  /*hover*/
 
-	.navbar .menu li a {
-		display: inline-block;
-		margin: 13px 0;
-		font-size: 25px;
-	}
-	.max-width {
-		max-width: 930px;
-	}
+  .navbar .menu li a {
+    display: inline-block;
+    margin: 13px 0;
+    font-size: 25px;
+  }
+  .max-width {
+    max-width: 930px;
+  }
 }
 
 @media (max-width: 195px) {
-	.max-width {
-		display: grid;
-		flex-wrap: wrap; /*alinha item em colunas */
-		align-items: center;
-		justify-content: center;
-	}
+  .max-width {
+    display: grid;
+    flex-wrap: wrap; /*alinha item em colunas */
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+section {
+  padding: 50px 0;
+}
+
+.top {
+  color: #fff;
+  display: flex;
+  background: url("../images/topo_v2.jpg");
+  height: 100vh;
+  min-height: 500px;
+  background-attachment: fixed; /*fixa a imagem de fundo */
+  font-family: "Ubuntu", sans-serif;
+}
+
+@media (max-width: 690px) {
+  section {
+    padding: 20px 0;
+  }
+}
+footer {
+  background-color: #121721;
+  padding: 25px 23px;
+  color: #fff;
+  text-align: center;
+  margin-top: auto;
+  font-family: "Poppins", sans-serif;
+}
+
+footer span a {
+  color: #547ec7;
+}
+footer span a:hover {
+  color: #fff;
 }
