stylizing services,serv-content and card

--- a/css/custom1.css
+++ b/css/custom1.css
@@ -1,105 +1,96 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family:wght@400;500;700&display=swap");
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
-	background-color: #0c0f16;
+  background-color: #0c0f16;
 }
 
-
 .max-width {
-	max-width: 1300px;
-	margin: auto;
-	padding: 0 20px;
+  max-width: 1300px;
+  margin: auto;
+  padding: 0 20px;
 }
 
 .navbar {
-	position: fixed;
-	width: 100%;
-	z-index: 999;
-	background-color: #121721;
-	font-family: "Ubuntu", sans-serif;
-	padding: 20px 0;
-	border-bottom: 1px solid #1b202a;
+  position: fixed;
+  background-color: #121721;
+  z-index: 999;
+  width: 100%;
+  padding: 20px 0;
+  font-family: "Ubuntu", sans-serif;
+  border-bottom: 1px solid #1b202a;
 }
 
-.navbar .max-width {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.navbar .menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar .logo a {
-	color: #547ec7;
-	font-size: 35px;
-	font-weight: 500;
+  color: #547ec7;
+  font-size: 35px;
+  font-weight: 500;
 }
 
 .navbar .menu li {
-	display: inline-block;
-	list-style: none;
+  display: inline-block;
+  list-style: none;
 }
 
 .navbar .menu li a {
-	display: block;
-	color: #fff;
-	font-size: 18px;
-	font-weight: 400;
-	margin-left: 25px;
+  display: block;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  margin-left: 25px;
 }
 
 .menu-btn {
-	color: #fff;
-	font-size: 23px;
-	cursor: pointer;
-	display: none;
+  color: #fff;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
 }
 
 @media (max-width: 640px) {
-	.menu-btn {
-		display: block;
-		z-index: 999;
-	}
-	.menu-btn.active:before {
-		content: "\f00d";
-	}
-	.navbar .menu {
-		position: fixed;
-		background-color: #121721;
-		height: 100vh;
-		width: 100%;
-		left: -100%;
-		top: 10%;
-		text-align: center;
-		padding-top: 80px;
-		transition: all 1.3s ease;
-	}
-	.navbar .menu.active {
-		left: 0;
-	}
-	.navbar .menu li {
-		display: block;
-	}
-	.navbar .menu li a {
-		display: inline-block;
-		margin: 13px;
-		font-size: 25px;
-	}
-    .max-width{
-        max-width: 930px;
-    }
-}
-
-@media(max-width:150px){
-    .max-width{
-        display: grid;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-    }
+  .menu-btn {
+    display: block;
+    z-index: 999;
+  }
+  .menu-btn i.active:before {
+    content: "\f00d";
+  }
+  .navbar .menu {
+    position: fixed;
+    background-color: #121721;
+    width: 100%;
+    height: 100vh;
+    left: -100%;
+    top: 10%;
+    font-family: "Ubuntu", sans-serif;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 1.3s ease;
+  }
+  .navbar .menu.active {
+    left: 0;
+  }
+  .navbar .menu li {
+    display: block;
+  }
+  .navbar .menu li a {
+    display: inline-block;
+    margin: 13px 0;
+    font-size: 25px;
+  }
+  .max-width {
+    margin: 930px;
+  }
 }
