--- a/css/custom.css
+++ b/css/custom.css
@@ -148,21 +148,89 @@ section {
   padding: 50px 0;
 }
 
-.top {
-  color: #fff;
-  display: flex;
-  background: url("../images/topo_v2.jpg");
-  height: 100vh;
-  min-height: 500px;
-  background-attachment: fixed; /*fixa a imagem de fundo */
-  font-family: "Ubuntu", sans-serif;
-}
-
 @media (max-width: 690px) {
   section {
     padding: 20px 0;
   }
 }
+
+/*classe section */
+.top {
+  color: #fff;
+  display: flex;
+  background: url("../images/topo_v2.jpg") no-repeat center;
+  height: 100vh;
+  min-height: 500px;
+  background-attachment: fixed; /*fixa a imagem de fundo */
+  background-size: cover;/*cobre os espaços vazios*/
+  font-family: "Ubuntu", sans-serif;
+}
+
+.top .max-width{
+  width: 100%;
+  display: flex;
+}
+
+.top .top-content .text-1{
+  font-size:25px;
+  margin-top: 100px;
+}
+.top .top-content .text-2{
+  font-size:55px;
+  font-weight: 400;
+  margin-left: -3px;
+}
+.top .top-content .text-3{
+  font-size:32px;
+  margin: 5px 0;
+}
+/*tornando o link em um botão */
+.top .top-content a{
+  display: inline-block;
+  background-color: #b02ab7;
+  color: #fff;
+  font-size: 25px;
+  padding: 12px 36px;
+  margin-top: 20px;
+  font-weight: 300;
+  border-radius: 6px;
+  border: 2px solid #b02ab7;
+  transition: all 0.3s ease;
+}
+.top .top-content a:hover{
+  color: #b02ab7;
+  background: none;  
+}
+
+.services{
+  color: #fff;
+  background-color: #0c0f16;
+  font-family: "Poppins", sans-serif;
+}
+
+.services .title{
+  text-align: center;
+  margin: 40px 0;
+  font-size: 35px;
+  font-weight: 400;
+}
+
+.services .serv-content{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.services .serv-content .card{
+  width: calc(33% - 20px);
+  background-color: #1b202a;
+  text-align: center;
+  border-radius: 6px;
+  padding: 50px 25px;
+}
+
 footer {
   background-color: #121721;
   padding: 25px 23px;
