--- a/css/custom.css
+++ b/css/custom.css
@@ -1,378 +1,436 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
 
 * {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   text-decoration: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
 }
 
-html,
-body {
-   height: 100%; /* p/ posicionar o footer no final da página*/
-}
+html{
+  scroll-behavior: smooth;/*especifica o comportamento da rolagem página: smooth para rolar de forma suave */
 
-body {
-   background-color: #0c0f16;
-   display: flex; /* p/ posicionar o footer no final da página*/
-   flex-direction: column; /* p/ posicionar o footer no final da página*/
 }
+/* Menu fixo no rodapé*/
+/* html,
+body {
+    height: 100%; p/ posicionar o footer no final da página
+}
+*/
+
+/* Menu fixo no rodapé*/
+/* body {
+    background-color: #0c0f16;
+    display: flex; p/ posicionar o footer no final da página
+     flex-direction: column; p/ posicionar o footer no final da página
+} */
 
 /*div-pai do nav */
 .max-width {
-   max-width: 1300px;
-   margin: auto;
-   padding: 0 20px;
+    max-width: 1300px;
+    margin: auto;
+    padding: 0 20px;
 }
 
 /* nav */
 .navbar {
-   position: fixed;
-   width: 100%;
-   z-index: 999;
-   padding: 20px 0;
-   font-family: "Ubuntu", sans-serif;
-   /* background-color: #121721; */
-   background-color: none;
-   border-bottom: 1px solid #1b202a;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding: 20px 0;
+    font-family: "Ubuntu", sans-serif;
+    background-color: #121721;
+    /* background-color: none; para menu transparente*/
+    border-bottom: 1px solid #1b202a;
 }
 
 .navbar .max-width {
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .navbar .logo a {
-   color: #547ec7;
-   font-size: 35px;
-   font-weight: 500;
+    color: #547ec7;
+    font-size: 35px;
+    font-weight: 500;
 }
 
 /*hover .logo */
 .navbar .logo a:hover {
-   color: #fff;
+    color: #fff;
 }
 
 .navbar .menu {
-   margin-right: 20px;
+    margin-right: 20px;
 }
 
 .navbar .menu li {
-   list-style: none;
-   display: inline-block; /*coloca em uma unica linha*/
+    list-style: none;
+    display: inline-block; /*coloca em uma unica linha*/
 }
 
 /*hover no a*/
 .navbar .menu li a:hover {
-   color: #26c5dc;
+    color: #26c5dc;
 }
 
 .navbar .menu li a {
-   display: block;
-   color: #fff;
-   font-size: 18px;
-   font-weight: 400;
-   margin-left: 25px;
+    display: block;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 400;
+    margin-left: 25px;
 }
 
 .menu-btn {
-   color: #fff;
-   font-size: 23px;
-   cursor: pointer;
-   display: none; /*esconder icone bars*/
+    color: #fff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none; /*esconder icone bars*/
 }
 
 /*mostrar o icone bars */
 /* @media (max-width: 947px) { */
 @media (max-width: 640px) {
-   .menu-btn {
-      display: block;
-      z-index: 999;
-   }
+    .menu-btn {
+        display: block;
+        z-index: 999;
+    }
 
-   /*trocando de icone bars p/ f00d */
-   .menu-btn i.active:before {
-      content: "\f00d";
-   }
-   .navbar .menu {
-      position: fixed;
-      background-color: #121721;
-      height: 100vh; /* para ocupar 100% da tela quando minimizar*/
-      width: 100%;
-      left: -100%; /* esconde todo menu da direita para esquerda*/
-      /* top: 0; */
-      top: 10%;
-      text-align: center;
-      padding-top: 80px;
-      transition: all 1.3s ease;
-   }
-   .navbar .menu.active {
-      left: 0;
-   }
-   .navbar .menu li {
-      display: block;
-   }
+    /*trocando de icone bars p/ f00d */
+    .menu-btn i.active:before {
+        content: "\f00d";
+    }
+    .navbar .menu {
+        position: fixed;
+        background-color: #121721;
+        height: 100vh; /* para ocupar 100% da tela quando minimizar*/
+        width: 100%;
+        left: -100%; /* esconde todo menu da direita para esquerda*/
+        /* top: 0; */
+        top: 10%;
+        text-align: center;
+        padding-top: 80px;
+        transition: all 1.3s ease;
+    }
+    .navbar .menu.active {
+        left: 0;
+    }
+    .navbar .menu li {
+        display: block;
+    }
 
-   /*hover*/
+    /*hover*/
 
-   .navbar .menu li:hover {
-      border: 1px solid #26c5d5;
-      border-radius: 4px;
-   }
-   .navbar .menu li a:hover {
-      color: #26c5d5;
-   }
-   /*hover*/
+    .navbar .menu li:hover {
+        border: 1px solid #26c5d5;
+        border-radius: 4px;
+    }
+    .navbar .menu li a:hover {
+        color: #26c5d5;
+    }
+    /*hover*/
 
-   .navbar .menu li a {
-      display: inline-block;
-      margin: 13px 0;
-      font-size: 25px;
-   }
-   .max-width {
-      max-width: 930px;
-   }
+    .navbar .menu li a {
+        display: inline-block;
+        margin: 13px 0;
+        font-size: 25px;
+    }
+    .max-width {
+        max-width: 930px;
+    }
 }
 
 @media (max-width: 195px) {
-   .max-width {
-      display: grid;
-      flex-wrap: wrap; /*alinha item em colunas */
-      align-items: center;
-      justify-content: center;
-   }
+    .max-width {
+        display: grid;
+        flex-wrap: wrap; /*alinha item em colunas */
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 section {
-   padding: 50px 0;
+    padding: 50px 0;
 }
 
 @media (max-width: 690px) {
-   section {
-      padding: 20px 0;
-   }
+    section {
+        padding: 20px 0;
+    }
 }
 
 /*classe section */
 .top {
-   color: #fff;
-   display: flex;
-   background: url("../images/topo_v2.jpg") no-repeat center;
-   height: 100vh;
-   min-height: 500px;
-   background-attachment: fixed; /*fixa a imagem de fundo */
-   background-size: cover; /*cobre os espaços vazios*/
-   font-family: "Ubuntu", sans-serif;
+    color: #fff;
+    display: flex;
+    background: url("../images/topo_v2.jpg") no-repeat center;
+    height: 100vh;
+    min-height: 500px;
+    background-attachment: fixed; /*fixa a imagem de fundo */
+    background-size: cover; /*cobre os espaços vazios*/
+    font-family: "Ubuntu", sans-serif;
 }
 
 .top .max-width {
-   width: 100%;
-   display: flex;
+    width: 100%;
+    display: flex;
 }
 
 .top .top-content .text-1 {
-   font-size: 25px;
-   margin-top: 100px;
+    font-size: 25px;
+    margin-top: 100px;
 }
 .top .top-content .text-2 {
-   font-size: 55px;
-   font-weight: 400;
-   margin-left: -3px;
+    font-size: 55px;
+    font-weight: 400;
+    margin-left: -3px;
 }
 .top .top-content .text-3 {
-   font-size: 32px;
-   margin: 5px 0;
+    font-size: 32px;
+    margin: 5px 0;
 }
 /*tornando o link em um botão */
 .top .top-content a {
-   display: inline-block;
-   background-color: #b02ab7;
-   color: #fff;
-   font-size: 25px;
-   padding: 12px 36px;
-   margin-top: 20px;
-   font-weight: 300;
-   border-radius: 6px;
-   border: 2px solid #b02ab7;
-   transition: all 0.3s ease;
+    display: inline-block;
+    background-color: #b02ab7;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    font-weight: 300;
+    border-radius: 6px;
+    border: 2px solid #b02ab7;
+    transition: all 0.3s ease;
 }
 .top .top-content a:hover {
-   color: #b02ab7;
-   background: none;
+    color: #b02ab7;
+    background: none;
 }
 
 .services {
-   color: #fff;
-   background-color: #0c0f16;
-   font-family: "Poppins", sans-serif;
+    color: #fff;
+    background-color: #0c0f16;
+    font-family: "Poppins", sans-serif;
 }
 
 .services .title {
-   text-align: center;
-   margin: 40px 0;
-   font-size: 35px;
-   font-weight: 400;
+    text-align: center;
+    margin: 40px 0;
+    font-size: 35px;
+    font-weight: 400;
 }
 
 .services .serv-content {
-   display: flex;
-   flex-wrap: wrap;
-   align-items: center;
-   justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .services .serv-content .card {
-   width: calc(33% - 20px);
-   background-color: #1b202a;
-   text-align: center;
-   border-radius: 6px;
-   padding: 50px 25px;
-   cursor: pointer;
-   transition: all 0.3s ease;
+    width: calc(33% - 20px);
+    background-color: #1b202a;
+    text-align: center;
+    border-radius: 6px;
+    padding: 50px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .services .serv-content .card:hover {
-   background: #b02ab7;
+    background: #b02ab7;
 }
 .services .serv-content .card i {
-   font-size: 50px;
-   color: #b02ab7;
-   transition: all 0.7s ease;
+    font-size: 50px;
+    color: #b02ab7;
+    transition: all 0.7s ease;
 }
 .services .serv-content .card {
-   transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 .services .serv-content .card:hover .box {
-   transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .services .serv-content .card:hover i {
-   color: #fff;
+    color: #fff;
 }
 
 .services .serv-content .card .text {
-   font-size: 25px;
-   margin: 10px 0 7px 0;
+    font-size: 25px;
+    margin: 10px 0 7px 0;
 }
 @media (max-width: 947px) {
-   .services .serv-content .card {
-      width: calc(50% - 10px); /* 50% coloca dois em uma linha */
-      margin-bottom: 20px;
-   }
+    .services .serv-content .card {
+        width: calc(50% - 10px); /* 50% coloca dois em uma linha */
+        margin-bottom: 20px;
+    }
 }
 
 @media (max-width: 690px) {
-   .services .serv-content .card {
-      width: 100%; /*ocupa uma linha por vez */
-   }
+    .services .serv-content .card {
+        width: 100%; /*ocupa uma linha por vez */
+    }
+    .contact .contact-content .info .sub-title {
+      word-break: break-all;
+      font-size: 15px;
+
+  }
 }
 
 .contact {
-   color: #fff;
-   background-color: #151921;
-   font-family: "Poppins", sans-serif;
-   padding-bottom: 100px;
+    color: #fff;
+    background-color: #151921;
+    font-family: "Poppins", sans-serif;
+    padding-bottom: 100px;
 }
 .contact .title {
-   text-align: center;
-   margin-bottom: 50px;
-   padding-bottom: 50px;
-   font-size: 35px;
-   font-weight: 400;
+    text-align: center;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    font-size: 35px;
+    font-weight: 400;
 }
 /*div filho da section*/
 .contact .contact-content {
-   display: flex;
-   flex-wrap: wrap;
-   align-items: center;
-   justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .contact .contact-content .column {
-   width: calc(50% - 30px);
+    width: calc(50% - 30px);
 }
 .contact .contact-content .left p {
-   text-align: justify;
+    text-align: justify;
 }
 .contact .contact-content .left .icons {
-   margin: 10px 0;
+    margin: 10px 0;
 }
 
 .contact .contact-content .row {
-   display: flex;
-   height: 65px;
-   align-items: center;
+    display: flex;
+    height: 65px;
+    align-items: center;
 }
 
 .contact .contact-content .row .info {
-   margin-left: 30px;
+    margin-left: 30px;
 }
 
 .contact .contact-content .row i {
-   font-size: 25px;
-   color: #b02ab7;
+    font-size: 25px;
+    color: #b02ab7;
 }
 
 .contact .contact-content .info .head {
-   font-weight: 500;
+    font-weight: 500;
 }
 
 .contact .contact-content .info .sub-title {
-   color: #f6f6f6;
+    color: #f6f6f6;
+    /* word-break: break-all; */
 }
 
 .contact .contact-content .text {
-   font-size: 20px;
-   font-weight: 500;
-   margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
 }
 
 .contact .right form .field,
-.contact .right form .fields, .field{
-  height: 45px;
-  width: 100%;
-  margin-bottom: 15px;
+.contact .right form .fields .field {
+	height: 45px;
+	width: 100%;
+	margin-bottom: 15px;
 }
-
-.contact .right form .textarea{
-  height: 80px;
-  width: 100%;
+.contact .right form .textarea {
+	height: 80px;
+	width: 100%;
 }
-
-.contact .right form .name{
-  margin-right: 10px;
+.contact .right form .name {
+	margin-right: 10px;
 }
-
 .contact .right form .field input,
-.contact .right form .textarea textarea{
-  height: 100%;
-  width: 100%;
-  border-radius: 6px;
-  outline: none;
-  padding: 0 15px;
-  font-family: "Poppins", sans-serif;
-  transition: all 0.3s ease;
+.contact .right form .textarea textarea {
+	height: 100%;
+	width: 100%;
+	border-radius: 6px;
+	outline: none;
+	padding: 0 15px;
+	font-family: "Poppins", sans-serif;
+	transition: all 0.3s ease;
 }
 .contact .right form .field input:focus,
-.contact .right form .textarea textarea:focus{
-  border-color: #b02ab7;
+.contact .right form .textarea textarea:focus {
+	border-color: #b02ab7;
 }
-
+.contact .right form .textarea textarea {
+	padding-top: 10px;
+	resize: none;
+}
+.contact .right form .button-area {
+	display: flex;
+	align-items: center;
+}
+.right form .button-area button {
+	color: #fff;
+	display: block;
+	width: 160px !important;
+	height: 45px;
+	outline: none;
+	font-size: 18px;
+	font-weight: 400;
+	border-radius: 6px;
+	cursor: pointer;
+	flex-wrap: wrap;
+	background-color: #b02ab7;
+	border: 2px solid #b02ab7;
+	transition: all 0.3s ease;
+}
+.right form .button-area button:hover {
+	color: #b02ab7;
+	background: none;
+}
+@media(max-width:947px){
+  .contact .contact-content .column{
+    width: 100%; /*para cada coluna ocupe 100% */
+    margin-bottom: 35px;
+  }
+}
+@media(max-width:500px){
+  .contact .title{
+    margin-top: 10px;
+  }
+  .contact .right form .fields{
+    flex-direction: column;
+  }
+  .contact .right form .name,
+  .contact .right form .email{
+    margin: 0;
+  }
+  .contact .contact-content .info .sub-title {
+    /* word-break: break-all; */
+    font-size: 15px;
+}
+}
 
 
 footer {
-   background-color: #121721;
-   padding: 25px 23px;
-   color: #fff;
-   text-align: center;
-   margin-top: auto;
-   font-family: "Poppins", sans-serif;
+    background-color: #121721;
+    padding: 25px 23px;
+    color: #fff;
+    text-align: center;
+    margin-top: auto;
+    font-family: "Poppins", sans-serif;
 }
 
 footer span a {
-   color: #547ec7;
+    color: #547ec7;
 }
 footer span a:hover {
-   color: #fff;
+    color: #fff;
 }
