--- a/css/custom.css
+++ b/css/custom.css
@@ -41,7 +41,8 @@ body {
     font-family: "Ubuntu", sans-serif;
     background-color: #121721;
     /* background-color: none; para menu transparente*/
-    border-bottom: 1px solid #1b202a;
+    /* border-bottom: 1px solid #1b202a; */
+    box-shadow: 2px 2px 5px #d9d9d9, -2px -2px 5px #ffff;
 }
 
 .navbar .max-width {
