--- a/css/custom.css
+++ b/css/custom.css
@@ -119,7 +119,8 @@ body {
         left: -100%; /* esconde todo menu da direita para esquerda*/
         /* top: 0; */
         top: 13%;
-        border-bottom-right-radius: 25%;
+        border-bottom-right-radius: 6%;
+        border-top-right-radius: 6%;
         text-align: center;
         padding-top: 80px;
         transition: all 1.3s ease;
