updated navbar menu

--- a/css/custom.css
+++ b/css/custom.css
@@ -113,22 +113,24 @@ body {
     }
     .navbar .menu {
         position: fixed;
-        background-color: rgb(18, 23, 33);
-        background: rgba(62, 161, 117, 0.5);
+        background-color: #12172180;
+        /* background: rgba(62, 161, 117, 0.5); */
         height: 62.5vh; /* para ocupar 100% da tela quando minimizar*/
         width: 100%;
-        left: -100%; /* esconde todo menu da direita para esquerda*/
-        /* top: 0; */
-        top: 13%;
+        /* left: -100%; esconde todo menu da direita para esquerda */
+        top: -100%;
+        /* top: 15%; */
         border-bottom-right-radius: 6%;
         border-top-right-radius: 6%;
         text-align: center;
         padding-top: 80px;
-        transition: all 1.3s ease;
-        box-shadow: 2px 2px 5px #d9d9d9, -2px -2px 5px #ffff;
+        transition: all .5s ease;
+        /* box-shadow: 2px 2px 5px #d9d9d9, -2px -2px 5px #ffff; */
+        box-shadow: 2px 2px 5px #d9d9d9;
     }
     .navbar .menu.active {
-        left: 0;
+        /* left: 0; */
+        top: 15%;
     }
     .navbar .menu li {
         display: block;
@@ -137,7 +139,7 @@ body {
     /*hover*/
 
     .navbar .menu li:hover {
-        border: 1px solid #26c5d5;
+        border: 2px solid #26c5d5;
         border-radius: 4px;
     }
     .navbar .menu li a:hover {
