updated navbar in css

--- a/css/custom.css
+++ b/css/custom.css
@@ -37,6 +37,7 @@ body {
     width: 100%;
     z-index: 999;
     padding: 20px 0;
+    /* line-height: 100px; */
     font-family: "Ubuntu", sans-serif;
     /* background-color: #121721; */
     /* background-color: #0d1117; */
